--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    
 }
 
 .navbar{
@@ -13,7 +14,6 @@
 }
 .logo{
     width:20%;
-    
 }
 .logo img{
     width:25%;
@@ -32,8 +32,8 @@
     cursor:pointer;
     height:35px;
     width:40%;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: auto;
+    padding-right:auto;
     border-radius: 10px;
     border:2px solid black;
     border-color:rgb(143, 143, 168) ;
@@ -104,8 +104,8 @@
 }
 .img{
     height:190px;
-    width:90%; 
-    background-size: cover;
+    width:100%; 
+    
 }
 
 .boxes {
